Fixed alignment of Remember me checkbox label

--- a/app/assets/stylesheets/dashboard/application.scss
+++ b/app/assets/stylesheets/dashboard/application.scss
@@ -110,7 +110,7 @@ a {
       margin-left: 0;
     }
     label {
-      padding-left: 5px;
+      padding-left: 15px;
     }
   }
   .form-control {
